--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -32,7 +32,7 @@
           
     .row
       .small-12.medium-8.columns.medium-offset-2
-        .body= raw sanitize(@post.body.gsub(/\&nbsp;/, ' '), tags: %w{bold b strong a u p br underline i italic em})
+        .body= raw sanitize(@post.body.gsub(/\&nbsp;/, ' '), tags: %w{bold b strong a u p br iframe underline i italic em})
     .row
       .small-12.medium-3.columns.small-centered
         - unless @post.previous.nil?
