newf field notes stuff

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,8 +19,10 @@
  *= require calls
  *= require mobile
  *= require posts
+ *= require field_notes
  *= require jquery-ui
  *= require jquery-overrides
+
  */
 
 @import 'foundation_and_overrides';
