--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -11,6 +11,8 @@
   .row
     .large-5.small-12.columns= f.input :title
   .row
+    .large-5.small-12.columns= f.input :subsite, label: 'Put under optional sub-layout:'
+  .row
     .large-8.small-12.columns= f.input :body, as: :text, input_html: {class: :ckeditor}
   .row
     .large-5.small-12.columns
