--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -33,7 +33,10 @@
       = f.input :postcategories, input_html: {class: :chosen_select}, label: 'Post categories?'
       
   .row
-    .small-12.large-6.columns= f.input :published, as: :boolean      
+    .small-12.large-6.columns= f.input :published, as: :boolean
+  .row
+    .small-12.large-6.columns= f.input :subsite, label: 'Also feature on sub-site: '   
+        
   .row
     .small-6.large-3.columns= f.input :published_at, as: :string,  :input_html => { :class => "datetime_picker"}
   .row
