--- a/app/views/admin/subsites/_form.html.haml
+++ b/app/views/admin/subsites/_form.html.haml
@@ -6,5 +6,7 @@
   .row
     .medium-7.small-12.columns= f.input :layout, as: :string, input_html: {required: ''}, label: 'Rails layout name:'
   .row
+    .medium-7.small-12.columns= f.input :symposium, as: :select
+  .row
     .small-12.medium-3.columns= f.submit 'Save', class: [:button, :small]
     
