--- a/app/assets/stylesheets/field_notes.css.scss
+++ b/app/assets/stylesheets/field_notes.css.scss
@@ -74,13 +74,55 @@ nav.top-bar {
 .group_container {
   border-bottom: 2px solid black;
 }
+
+.participants_container {
+  border-top: 2px solid black;
+  .host_container, .participant_container {
+    padding: 2.5rem 0;
+    border-bottom: 2px solid black;
+    &.last {
+      border-bottom: none;
+    }
+    .name {
+      font-size: 2.063rem;
+      margin-bottom: 1.5rem;
+      color: #444;
+    }
+    .bio, .bio p {
+      color: #444;
+      font-size: 0.9rem;
+      line-height: 1.4rem;
+      color: #444;
+      font-weight: 300;
+      margin-bottom: 0.8rem;
+    }
+    .host_icon {
+      img {
+        border: 2px solid #8F7BAF;
+      }
+    }
+    .participant_icon {
+      img {
+        border: 2px solid black;
+      }
+    }
+  }
+}
 .group_container, .group_detail {
   padding: 2.5rem 0;
   h2 {
     font-size: 2.063rem;
     color: #444;
-    a { color: #444;
+    a { 
+      color: #444;
     }
+  }
+  .short_description, .short_description p {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+    color: #222;
+    font-weight: 300;
+    margin-bottom: 0.8rem;
   }
   .navigator {
     ol {
