--- a/app/views/layouts/field_notes.html.haml
+++ b/app/views/layouts/field_notes.html.haml
@@ -67,7 +67,7 @@
                 %li{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about')
                 %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                 %li{class: controller.controller_name == 'groups' ? :active : false}= link_to 'Groups', groups_path
-                %li{class: controller.controller_name == 'participants' ? :active : false}= link_to 'Participants', page_path('programme')
+                %li{class: controller.controller_name == 'participants' ? :active : false}= link_to 'Participants', participants_path
           .row
             .down_arrow_wrapper
               %ul.top-bar-menu
