--- a/app/views/admin/participants/_form.html.haml
+++ b/app/views/admin/participants/_form.html.haml
@@ -11,10 +11,13 @@
 
   .row
     .small-12.columns.medium-8= f.input :bio, as: :ckeditor
+    
+  .row
+    .small-12.columns.medium-8= f.input :website, as: :string  
   .row
     .small-10.columns.medium-6= f.input :avatar, label: 'Photo: '
   .row
     .small-6.medium-3.columns= f.input :is_host, as: :boolean, label: 'Host of this group?'
-    .small-6.medium-3.end.columns= f.input :accepted, as: :boolean, label: 'Accepted?', hint: 'Must be checked for them to appear on site'
+    .small-6.medium-3.end.columns= f.input :accepted, as: :boolean, label: 'Accepted?', hint: 'Must be checked for them to appear on site', input_html: {checked: :checked}
   .row
     .small-6.medium-6.columns= f.submit 'Save', class: [:button, :small]
