Field_Notes-specific CSS rules for mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,7 @@
  *= require mobile
  *= require posts
  *= require field_notes
+ *= require fn_mobile
  *= require jquery-ui
  *= require jquery-overrides
 
