--- a/app/views/layouts/field_notes.html.haml
+++ b/app/views/layouts/field_notes.html.haml
@@ -107,10 +107,10 @@
           .left.text-left PROGRAMME
           .text-right SEPT 2015
         .title_box.text-center
-          .title= link_to 'FIELD_NOTES', '/'
+          .title= link_to 'FIELD_NOTES HYBRID MATTERs', '/'
             
         .blurb.text-center
-          a field lab for theory and practice on art&science work
+          an art&science field laboratory about converging ecologies
             
       = content_for :jquery do
         :plain  
