--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -31,12 +31,13 @@ nav.activities-bar {
   padding: 95px 0 0 0;
 }
 
-#activity_map_wrapper {
-  background: url(image_path('map.png')) no-repeat center top;
-  background-size: cover;
-  padding: 10%;
-}
 
+#activity_map_wrapper {
+  position: absolute;
+  left: 15%;
+  margin-top: 3rem;
+  z-index: 12;
+}
 .vertical-line {
   background: url(image_path('arrowline.png')) repeat-y 23px top;
   padding-top: 2rem;
@@ -95,4 +96,12 @@ nav.activities-bar {
     }
   }
   
+  
+}
+
+
+// map stuff below
+#map_container {
+  width: 100%;
+  height: 100%;
 }
