--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,13 +1,49 @@
+#map_left.left
+  &nbsp;
+
+
+#map_right
+  &nbsp; 
+  .kilpisjarvi.partner_location
+    .partner_circle.bioart
+    Finnish Society of BioArt
+    
+  .partner_location.helsinki
+    .left_text Finnish Society of BioArt
+    .partner_circle.bioart.rightc
+    
+  .partner_location.forumbox
+    .left_text Forum Box
+    .partner_circle.forumbox.rightc 
+    
+  .partner_location.grenland
+    .partner_circle.grenland
+    Kunsthall Grenland        
+    
+  .malmo.partner_location
+    .partner_circle.malmo
+    Malmö University
+
+  .partner_location.itu
+    .partner_circle.itu
+    IT University of Copenhagen
+    
+  .partner_location.nikolai
+    .partner_circle.nikolai
+    Nikolai Kunsthall  
+
+
 #activity_map_wrapper
   .vertical-line
     - @activities.each do |activity|
       .activity_row
         .circle.text-center
           = activity.start_at.strftime("%d")
-        
+      
         .activity_entry
           .arrow_left{style: "border-right: 20px solid ##{activity.box_colour};"} &nbsp;
           .activity_box{style: "background-color: ##{activity.box_colour};"}
             .title.text-center= activity.name
             .dates.text-center= date_range(activity.start_at, activity.end_at)
             .activity_description= truncate_html(sanitize(activity.description, tags: %w{b strong i italic em u underline bold}), length: 150)
+.clearing
